# quanti

./: .coverage  .env.template  .gitignore  120MA  AGENTS.md  ARCHITECT_REVIEW.md  ARCHIVE_README.md  FINAL_REVIEW.md  HANDBOOK.md  IMPLEMENTATION_PLAN.md  METHODOLOGY_BLUEPRINT.md  PLANNER_HANDOFF.md  README.md  activate.ps1  archive.md  attribution.py  attribution2.py  check.py  pyproject.toml  run_backtest.py  run_full_pipeline.py  test_genuine_prev.py  validate_loop.py
data/: _backtest_progress.txt  deep_review_report.md  delayed_confirm_report.md  exploratory_strategies_report.md  full_pipeline_report.json  paper_trading_results.json  param_search_report.md  param_search_results.csv  phase3_full_report.json  phase3_report.json  production_grid_results.csv
docs/: HISTORY.md  METHODOLOGY.md  brain_dump.md  deep_interview_response.md  for_the_next_planner.md  retrospective.md  risk_engineering.md  self_reflection.md  strategy_notes.md  v6_项目总结.md
docs/plans/: architecture_b_audit_plan.md  etf_rotation_v6_journal.md  etf_rotation_v6_plan.md  etf_rotation_v6_results.md  etf_rotation_v6_v1.0.0.md  open-questions.md
quanti/: indicators.py  main_live.py  main_paper.py  main_paper_delayed.py  run_daily.py  types.py
quanti/backtest/: engine.py
quanti/config/: etf_universe.py  settings.py
quanti/data/: index_pe.py  schema.py  storage.py  validation.py
quanti/data/ingestion/: __init__.py  akshare_fetcher.py  cb_fetcher.py  stock_fetcher.py  tushare_fetcher.py
quanti/execution/: broker.py  circuit_breaker.py  order_manager.py  risk.py
quanti/monitor/: alerts.py  logger.py  metrics.py
quanti/state/: journal.py  recovery.py
quanti/strategy/: __init__.py  base.py  cb_dual_low.py  delayed_confirm.py  dividend_barbell.py  etf_rotation.py  etf_trend.py  market_state_etf.py  pe_band.py  sector_rotation.py  signal_concentration.py  signal_filters.py  state_machine.py  stock_momentum.py
scripts/: _funcs.py  alpha_decomposition.py  asset_rotation_v4.py  asset_rotation_v6.py  audit_etf_listing.py  audit_lookahead.py  auto_update.py  backtest_alt_strategies.py  backtest_etf_market_state.py  backtest_hybrid_strategies.py  backtest_hybrid_v2.py  backtest_multi_sector.py  backtest_state_machine_live.py  batch_download_stocks.py  bull_trap_analysis.py  causal_backtest_verify.py  daily_signal.py  delayed_confirm_backtest.py  deploy_config_sweep.py  download_etf_universe.py  fetch_etf_pool.py  fetch_history.py  fetch_macro.py  final_cagr.py  final_friction_analysis.py  final_improvements.py  healthcheck.ps1  ingest_daily.ps1  install_nssm_service.ps1  live_signal.py  martingale_accumulate.py  multi_etf_monthly.py  overfitting_probe.py  param_grid_search.py  phase3_minimal.py  phase3_train_val_test.py  phase3_v2_backtest.py  production_grid_search.py  pure_alpha_strategy.py  reconcile.ps1  (+32 more)
server/: main.py
tests/: conftest.py  test_allocation_strategies.py  test_backtest_engine.py  test_circuit_breakers.py  test_concentration_limit.py  test_data_validation.py  test_etf_rotation.py  test_etf_universe.py  test_indicators.py  test_market_defenses.py  test_omc_utils.py  test_order_state.py  test_risk_check_regression.py  test_risk_checker.py  test_sector_rotation.py  test_server.py  test_signal_filters.py  test_signals.py  test_state_recovery.py  test_strategy_entry.py  test_strategy_exit.py  test_strategy_signals.py
